--- a/index.html
+++ b/index.html
@@ -6,8 +6,15 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>w2k - Pixel Art</title>
   <link rel="stylesheet" href="style.css">
+  <script src="script.js" defer></script>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=VT323&display=swap" rel="stylesheet">
 </head>
 <body>
-  <h1 id="title">Paleta de Cores</h1>
+  <main class="container">
+    <div id="color-palette">
+    </div>
+  </main>
 </body>
 </html>
