--- a/index.html
+++ b/index.html
@@ -13,9 +13,8 @@
 </head>
 <body>
   <main class="container">
-    <div id="color-palette">
-
-    </div>
+    <div id="color-palette"></div>
+    <div id="pixel-board"></div>
   </main>
 </body>
 </html>
